# pydrobert-pytorch

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE_nltk.txt  MANIFEST.in  README.md  appveyor.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
docs/: cli_helper.py  requirements.txt
docs/source/: advanced_attention.rst  cli.rst  conf.py  estimator_convergence.csv  estimator_convergence.py  estimators.rst  index.rst  lm.rst  modules.rst  pydrobert.torch.config.rst  pydrobert.torch.data.rst  pydrobert.torch.distributions.rst  pydrobert.torch.estimators.rst  pydrobert.torch.functional.rst  pydrobert.torch.lightning.rst  pydrobert.torch.modules.rst  pydrobert.torch.rst  pydrobert.torch.training.rst  references.rst
docs/source/api/pydrobert/: torch.rst
docs/source/api/pydrobert/torch/: argcheck.rst  config.rst  data.rst  distributions.rst  estimators.rst  functional.rst  lightning.rst  modules.rst  training.rst
docs/source/tutorials/: advanced-attn.rst  lm.rst
pydrobert/: __init__.py
pydrobert/torch/: __init__.py  command_line.py  data.py  estimators.py  layers.py  training.py  util.py
recipe/: build_conda.sh  meta.yaml
src/pydrobert/torch/: __init__.py  _attn.py  _chunk.py  _combinatorics.py  _compat.py  _conditional_bernoulli.py  _dataloaders.py  _datasets.py  _decoding.py  _enumerate_estimator.py  _estimators.py  _feats.py  _img.py  _jit.py  _lm.py  _mc.py  _pad.py  _parsing.py  _pl_data.py  _rl.py  _straight_through.py  _string.py  _textgrid.py  _wrappers.py  argcheck.py  command_line.py  config.py  data.py  distributions.py  estimators.py  functional.py  layers.py  lightning.py  modules.py  training.py  util.py
tests/: conftest.py  test_argcheck.py  test_attn.py  test_chunk.py  test_combinatorics.py  test_command_line.py  test_conditional_bernoulli.py  test_data.py  test_dataloaders.py  test_datasets.py  test_decoding.py  test_distributions.py  test_enumerate_estimator.py  test_estimators.py  test_feats.py  test_img.py  test_layers.py  test_lm.py  test_mc.py  test_metadata.py  test_pad.py  test_parsing.py  test_pl_data.py  test_rl.py  test_straight_through.py  test_string.py  test_training.py  test_util.py
tests/dense_image_warp/: flow.npy  img.npy  warped.npy
tests/polyharmonic_spline/: o1.npy  o2.npy  o3.npy  q.npy  x.npy  y.npy
tests/republic/: README  exp.txt  queries.txt  token2id.map  vocab.txt
tests/sclite/: README  hyp.trn  per_utt.txt  ref.trn  sclite_out.txt  token2id.txt
tests/sparse_image_warp/: dst.npy  flow_0.npy  flow_2.npy  img.npy  src.npy  warped_0.npy  warped_2.npy
